--- a/dct_widgets/updatebox/updatebox.ui
+++ b/dct_widgets/updatebox/updatebox.ui
@@ -191,7 +191,7 @@
          </size>
         </property>
         <property name="focusPolicy">
-         <enum>Qt::NoFocus</enum>
+         <enum>Qt::StrongFocus</enum>
         </property>
         <property name="text">
          <string>...</string>
@@ -249,7 +249,7 @@
       <item row="1" column="2">
        <widget class="QCheckBox" name="cbxVerify">
         <property name="focusPolicy">
-         <enum>Qt::NoFocus</enum>
+         <enum>Qt::StrongFocus</enum>
         </property>
         <property name="text">
          <string/>
@@ -259,7 +259,7 @@
       <item row="2" column="7" colspan="2">
        <widget class="QPushButton" name="btnRun">
         <property name="focusPolicy">
-         <enum>Qt::NoFocus</enum>
+         <enum>Qt::StrongFocus</enum>
         </property>
         <property name="text">
          <string>Update</string>
