--- a/dct_widgets/blacklevelbox/blacklevelbox.ui
+++ b/dct_widgets/blacklevelbox/blacklevelbox.ui
@@ -50,6 +50,9 @@
           <height>240</height>
          </size>
         </property>
+        <property name="focusPolicy">
+         <enum>Qt::TabFocus</enum>
+        </property>
         <property name="toolTip">
          <string/>
         </property>
@@ -125,6 +128,9 @@
           <height>200</height>
          </size>
         </property>
+        <property name="focusPolicy">
+         <enum>Qt::TabFocus</enum>
+        </property>
         <property name="toolTip">
          <string/>
         </property>
@@ -197,6 +203,9 @@
           <width>16777215</width>
           <height>240</height>
          </size>
+        </property>
+        <property name="focusPolicy">
+         <enum>Qt::TabFocus</enum>
         </property>
         <property name="toolTip">
          <string/>
@@ -280,6 +289,9 @@
           <height>200</height>
          </size>
         </property>
+        <property name="focusPolicy">
+         <enum>Qt::TabFocus</enum>
+        </property>
         <property name="toolTip">
          <string/>
         </property>
@@ -317,6 +329,9 @@
       </item>
       <item row="1" column="3">
        <widget class="QPushButton" name="btnFlareLevelReset">
+        <property name="focusPolicy">
+         <enum>Qt::StrongFocus</enum>
+        </property>
         <property name="text">
          <string>Reset to Defaults</string>
         </property>
@@ -384,6 +399,9 @@
           <height>240</height>
          </size>
         </property>
+        <property name="focusPolicy">
+         <enum>Qt::TabFocus</enum>
+        </property>
         <property name="toolTip">
          <string/>
         </property>
@@ -427,6 +445,9 @@
           <height>200</height>
          </size>
         </property>
+        <property name="focusPolicy">
+         <enum>Qt::TabFocus</enum>
+        </property>
         <property name="toolTip">
          <string/>
         </property>
@@ -464,6 +485,9 @@
       </item>
       <item row="1" column="3">
        <widget class="QPushButton" name="btnMasterBlackReset">
+        <property name="focusPolicy">
+         <enum>Qt::StrongFocus</enum>
+        </property>
         <property name="text">
          <string>Reset to Defaults</string>
         </property>
@@ -492,6 +516,7 @@
    <class>SingleChannelKnobBox</class>
    <extends>QGroupBox</extends>
    <header>singlechannelknobbox.h</header>
+   <container>1</container>
   </customwidget>
   <customwidget>
    <class>TripleChannelKnobBox</class>
