--- a/dct_widgets/connectdialog/connectdialog.ui
+++ b/dct_widgets/connectdialog/connectdialog.ui
@@ -449,6 +449,9 @@
    </item>
    <item>
     <widget class="QDialogButtonBox" name="buttonBox">
+     <property name="focusPolicy">
+      <enum>Qt::StrongFocus</enum>
+     </property>
      <property name="orientation">
       <enum>Qt::Horizontal</enum>
      </property>
@@ -461,17 +464,19 @@
  </widget>
  <tabstops>
   <tabstop>tabController</tabstop>
-  <tabstop>cbxPortRS232</tabstop>
-  <tabstop>cbxBaudrateRS232</tabstop>
-  <tabstop>cbxDatabitsRS232</tabstop>
-  <tabstop>cbxParityRS232</tabstop>
-  <tabstop>cbxStopbitsRS232</tabstop>
   <tabstop>cbxPortRS485</tabstop>
+  <tabstop>btScan</tabstop>
   <tabstop>cbxBaudrateRS485</tabstop>
   <tabstop>cbxDatabitsRS485</tabstop>
   <tabstop>cbxParityRS485</tabstop>
   <tabstop>cbxStopbitsRS485</tabstop>
   <tabstop>sbxDevAddrRS485</tabstop>
+  <tabstop>cbxPortRS232</tabstop>
+  <tabstop>cbxBaudrateRS232</tabstop>
+  <tabstop>cbxDatabitsRS232</tabstop>
+  <tabstop>cbxParityRS232</tabstop>
+  <tabstop>cbxStopbitsRS232</tabstop>
+  <tabstop>buttonBox</tabstop>
  </tabstops>
  <resources>
   <include location="../../resource/resource.qrc"/>
