--- a/dct_widgets/wbbox/wbbox.ui
+++ b/dct_widgets/wbbox/wbbox.ui
@@ -24,6 +24,9 @@
        <pointsize>9</pointsize>
       </font>
      </property>
+     <property name="focusPolicy">
+      <enum>Qt::TabFocus</enum>
+     </property>
      <property name="toolTip">
       <string/>
      </property>
@@ -69,6 +72,9 @@
             <width>220</width>
             <height>230</height>
            </size>
+          </property>
+          <property name="focusPolicy">
+           <enum>Qt::TabFocus</enum>
           </property>
           <property name="toolTip">
            <string/>
@@ -150,6 +156,9 @@
             <height>230</height>
            </size>
           </property>
+          <property name="focusPolicy">
+           <enum>Qt::TabFocus</enum>
+          </property>
           <property name="toolTip">
            <string/>
           </property>
@@ -201,7 +210,7 @@
            <item row="0" column="1">
             <widget class="QCheckBox" name="cbxAwbEnable">
              <property name="focusPolicy">
-              <enum>Qt::NoFocus</enum>
+              <enum>Qt::StrongFocus</enum>
              </property>
              <property name="text">
               <string/>
@@ -274,7 +283,7 @@
               </size>
              </property>
              <property name="focusPolicy">
-              <enum>Qt::NoFocus</enum>
+              <enum>Qt::StrongFocus</enum>
              </property>
              <property name="alignment">
               <set>Qt::AlignCenter</set>
@@ -318,6 +327,9 @@
               <width>220</width>
               <height>230</height>
              </size>
+            </property>
+            <property name="focusPolicy">
+             <enum>Qt::TabFocus</enum>
             </property>
             <property name="toolTip">
              <string/>
@@ -365,6 +377,9 @@
           <width>200</width>
           <height>230</height>
          </size>
+        </property>
+        <property name="focusPolicy">
+         <enum>Qt::TabFocus</enum>
         </property>
         <property name="toolTip">
          <string/>
@@ -425,6 +440,9 @@
           <height>230</height>
          </size>
         </property>
+        <property name="focusPolicy">
+         <enum>Qt::TabFocus</enum>
+        </property>
         <property name="toolTip">
          <string/>
         </property>
@@ -477,6 +495,9 @@
           <width>200</width>
           <height>230</height>
          </size>
+        </property>
+        <property name="focusPolicy">
+         <enum>Qt::TabFocus</enum>
         </property>
         <property name="toolTip">
          <string/>
@@ -533,6 +554,9 @@
           <width>200</width>
           <height>230</height>
          </size>
+        </property>
+        <property name="focusPolicy">
+         <enum>Qt::TabFocus</enum>
         </property>
         <property name="toolTip">
          <string/>
@@ -592,6 +616,18 @@
    <container>1</container>
   </customwidget>
  </customwidgets>
+ <tabstops>
+  <tabstop>WbButtonBox</tabstop>
+  <tabstop>cbxAwbEnable</tabstop>
+  <tabstop>letAwbSpeed</tabstop>
+  <tabstop>RedGain</tabstop>
+  <tabstop>GreenGain</tabstop>
+  <tabstop>BlueGain</tabstop>
+  <tabstop>Hue</tabstop>
+  <tabstop>Saturation</tabstop>
+  <tabstop>Brightness</tabstop>
+  <tabstop>Contrast</tabstop>
+ </tabstops>
  <resources>
   <include location="../../resource/resource.qrc"/>
  </resources>
