Fixed a bug where we had two taskbar symbols instead of one
- When the automatic connect process was aborted, we would end up
  with two taskbar symbols (at least under linux). This is now fixed
  by making sure the progress bar is acutally closed.

Additionally:
- Added the QDarkStyleSheet to the third party licenses

--- a/dct_widgets/connectdialog/connectdialog.ui
+++ b/dct_widgets/connectdialog/connectdialog.ui
@@ -23,7 +23,7 @@
    <enum>Qt::NoContextMenu</enum>
   </property>
   <property name="windowTitle">
-   <string>Open control channel</string>
+   <string>Connect to ProVideo Device</string>
   </property>
   <property name="windowIcon">
    <iconset resource="../../resource/resource.qrc">
