Removed unneded third party license, renamed button
- Removed Cygwin license, since it is not needed anymore
- Renamed the "Broadcast-Mode" button to "Mulit-Camera-Mode", to
  avoid confusions

--- a/application/mainwindow.ui
+++ b/application/mainwindow.ui
@@ -471,7 +471,7 @@
     <bool>true</bool>
    </property>
    <property name="text">
-    <string>Broadcast-Mode</string>
+    <string>Multi-Camera-Mode</string>
    </property>
    <property name="toolTip">
     <string>Toggles the RS485 Broadcast-Mode on / off</string>
