--- a/resource/resource.qrc
+++ b/resource/resource.qrc
@@ -152,5 +152,9 @@
         <file>style/images/Vsepartoolbar.png</file>
         <file alias="doc/third-party-licenses.txt">../third-party-licenses.txt</file>
         <file alias="doc/license.txt">../LICENSE</file>
+        <file>icons/cog-128.png</file>
+        <file>icons/cog-64.png</file>
+        <file>icons/cog-32.png</file>
+        <file>icons/cog-16.png</file>
     </qresource>
 </RCC>
