Fixes and improvements:
- Started implementing a new settings dialog which will contain
  system wide settings which are at the moment placed on the info
  tab (not finished yet!)
- Fixed a bug that made firmware updates impossible since cooper
  support was added
- Other small fixes

--- a/application/mainwindow.ui
+++ b/application/mainwindow.ui
@@ -488,6 +488,18 @@
     <string>Applies the Settings of the currently selected Camera to all Cameras in the current Broadcast-Group</string>
    </property>
   </action>
+  <action name="actionsettings">
+   <property name="icon">
+    <iconset resource="../resource/resource.qrc">
+     <normaloff>:/icons/cog-64.png</normaloff>:/icons/cog-64.png</iconset>
+   </property>
+   <property name="text">
+    <string>settings</string>
+   </property>
+   <property name="toolTip">
+    <string>Open Settings Dialog</string>
+   </property>
+  </action>
  </widget>
  <customwidgets>
   <customwidget>
