--- a/dct_widgets/updatebox/updatebox.ui
+++ b/dct_widgets/updatebox/updatebox.ui
@@ -35,7 +35,7 @@
          </size>
         </property>
         <property name="text">
-         <string>Programmer</string>
+         <string>Programmer Version</string>
         </property>
        </widget>
       </item>
@@ -97,7 +97,7 @@
         </property>
         <property name="maximumSize">
          <size>
-          <width>80</width>
+          <width>16777215</width>
           <height>16777215</height>
          </size>
         </property>
@@ -123,12 +123,12 @@
         </property>
         <property name="maximumSize">
          <size>
-          <width>80</width>
+          <width>16777215</width>
           <height>16777215</height>
          </size>
         </property>
         <property name="text">
-         <string>Version</string>
+         <string>Bootloader Version</string>
         </property>
        </widget>
       </item>
@@ -142,7 +142,7 @@
         </property>
         <property name="maximumSize">
          <size>
-          <width>80</width>
+          <width>16777215</width>
           <height>16777215</height>
          </size>
         </property>
@@ -208,7 +208,7 @@
         </property>
         <property name="maximumSize">
          <size>
-          <width>80</width>
+          <width>16777215</width>
           <height>16777215</height>
          </size>
         </property>
@@ -237,7 +237,7 @@
         </property>
         <property name="maximumSize">
          <size>
-          <width>50</width>
+          <width>16777215</width>
           <height>16777215</height>
          </size>
         </property>
