--- a/dct_widgets/updatebox/updatebox.ui
+++ b/dct_widgets/updatebox/updatebox.ui
@@ -176,25 +176,13 @@
       <string>Update Process</string>
      </property>
      <layout class="QGridLayout" name="gridLayout">
-      <item row="0" column="8">
-       <widget class="QPushButton" name="btnFilename">
-        <property name="minimumSize">
-         <size>
-          <width>25</width>
-          <height>25</height>
-         </size>
-        </property>
-        <property name="maximumSize">
-         <size>
-          <width>25</width>
-          <height>25</height>
-         </size>
-        </property>
+      <item row="2" column="5">
+       <widget class="QCheckBox" name="cbxVerify">
         <property name="focusPolicy">
          <enum>Qt::StrongFocus</enum>
         </property>
         <property name="text">
-         <string>...</string>
+         <string/>
         </property>
        </widget>
       </item>
@@ -217,17 +205,17 @@
         </property>
        </widget>
       </item>
-      <item row="0" column="2" colspan="6">
-       <widget class="QLineEdit" name="letFilename">
+      <item row="3" column="8">
+       <widget class="QPushButton" name="btnRun">
         <property name="focusPolicy">
-         <enum>Qt::NoFocus</enum>
+         <enum>Qt::StrongFocus</enum>
         </property>
-        <property name="readOnly">
-         <bool>true</bool>
+        <property name="text">
+         <string>Update</string>
         </property>
        </widget>
       </item>
-      <item row="1" column="1">
+      <item row="2" column="1">
        <widget class="QLabel" name="lblVerify">
         <property name="minimumSize">
          <size>
@@ -246,37 +234,49 @@
         </property>
        </widget>
       </item>
-      <item row="1" column="2">
-       <widget class="QCheckBox" name="cbxVerify">
+      <item row="0" column="8">
+       <widget class="QPushButton" name="btnFilename">
+        <property name="minimumSize">
+         <size>
+          <width>25</width>
+          <height>25</height>
+         </size>
+        </property>
+        <property name="maximumSize">
+         <size>
+          <width>25</width>
+          <height>25</height>
+         </size>
+        </property>
         <property name="focusPolicy">
          <enum>Qt::StrongFocus</enum>
         </property>
         <property name="text">
-         <string/>
+         <string>...</string>
         </property>
        </widget>
       </item>
-      <item row="2" column="7" colspan="2">
-       <widget class="QPushButton" name="btnRun">
+      <item row="0" column="5">
+       <widget class="QLineEdit" name="letFilename">
         <property name="focusPolicy">
-         <enum>Qt::StrongFocus</enum>
+         <enum>Qt::NoFocus</enum>
         </property>
-        <property name="text">
-         <string>Update</string>
+        <property name="readOnly">
+         <bool>true</bool>
         </property>
        </widget>
       </item>
-      <item row="2" column="2" colspan="5">
+      <item row="3" column="5">
        <widget class="QProgressBar" name="progressBar">
         <property name="value">
          <number>24</number>
         </property>
        </widget>
       </item>
-      <item row="2" column="1">
+      <item row="3" column="1">
        <widget class="QLabel" name="lblUpdateCount">
         <property name="text">
-         <string/>
+         <string>Progress</string>
         </property>
        </widget>
       </item>
