Fixed small dpcc bugs and other things:
- Fixed a bug where the "your dpcc table is not valid" dialog pops up
  if the device is changed
- A normal cursor will be shown during the "your dpcc table is not valid"
  dialog instead of the busy cursor
- Fixed typo in infobox

--- a/dct_widgets/infobox/infobox.ui
+++ b/dct_widgets/infobox/infobox.ui
@@ -900,7 +900,7 @@
 
 This program comes with ABSOLUTELY NO WARRANTY. This is free software, and you are welcome to redistribute it under certain conditions. See above license for more details.
 
-You can download the source code of this software on GitLab:</string>
+You can download the source code of this software from GitLab:</string>
           </property>
           <property name="wordWrap">
            <bool>true</bool>
