--- a/dct_widgets/connectdialog/connectdialog.ui
+++ b/dct_widgets/connectdialog/connectdialog.ui
@@ -46,13 +46,10 @@
           <string>Serial Connection</string>
          </property>
          <layout class="QGridLayout" name="gridLayout_2">
-          <item row="12" column="0">
-           <layout class="QHBoxLayout" name="horizontalLayout_15">
+          <item row="2" column="0">
+           <layout class="QHBoxLayout" name="horizontalLayout_11">
             <item>
-             <widget class="QLabel" name="lblStopbitsRS485">
-              <property name="enabled">
-               <bool>true</bool>
-              </property>
+             <widget class="QLabel" name="lblPortRS485">
               <property name="maximumSize">
                <size>
                 <width>100</width>
@@ -60,15 +57,12 @@
                </size>
               </property>
               <property name="text">
-               <string>Stopbits</string>
+               <string>Port</string>
               </property>
              </widget>
             </item>
             <item>
-             <widget class="QComboBox" name="cbxStopbitsRS485">
-              <property name="enabled">
-               <bool>true</bool>
-              </property>
+             <widget class="QComboBox" name="cbxPortRS485">
               <property name="minimumSize">
                <size>
                 <width>200</width>
@@ -79,10 +73,10 @@
             </item>
            </layout>
           </item>
-          <item row="13" column="0">
-           <layout class="QHBoxLayout" name="horizontalLayout_16">
+          <item row="6" column="0">
+           <layout class="QHBoxLayout" name="horizontalLayout_12">
             <item>
-             <widget class="QLabel" name="lblDevAddrRS485">
+             <widget class="QLabel" name="lblBaudrateRS485">
               <property name="maximumSize">
                <size>
                 <width>100</width>
@@ -90,12 +84,19 @@
                </size>
               </property>
               <property name="text">
-               <string>Dev Address</string>
+               <string>Baudrate</string>
               </property>
              </widget>
             </item>
             <item>
-             <widget class="QSpinBox" name="sbxDevAddrRS485"/>
+             <widget class="QComboBox" name="cbxBaudrateRS485">
+              <property name="minimumSize">
+               <size>
+                <width>200</width>
+                <height>0</height>
+               </size>
+              </property>
+             </widget>
             </item>
            </layout>
           </item>
@@ -132,18 +133,67 @@
             </item>
            </layout>
           </item>
-          <item row="14" column="0">
-           <spacer name="verticalSpacer_2">
-            <property name="orientation">
-             <enum>Qt::Vertical</enum>
+          <item row="13" column="0">
+           <layout class="QHBoxLayout" name="horizontalLayout_16">
+            <item>
+             <widget class="QLabel" name="lblDevAddrRS485">
+              <property name="maximumSize">
+               <size>
+                <width>100</width>
+                <height>16777215</height>
+               </size>
+              </property>
+              <property name="text">
+               <string>Dev Address</string>
+              </property>
+             </widget>
+            </item>
+            <item>
+             <widget class="QSpinBox" name="sbxDevAddrRS485"/>
+            </item>
+           </layout>
+          </item>
+          <item row="3" column="0">
+           <widget class="QPushButton" name="btScan">
+            <property name="sizePolicy">
+             <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
+              <horstretch>0</horstretch>
+              <verstretch>0</verstretch>
+             </sizepolicy>
             </property>
-            <property name="sizeHint" stdset="0">
-             <size>
-              <width>20</width>
-              <height>40</height>
-             </size>
+            <property name="toolTip">
+             <string>Automatically Scan for Devices on the given COM-Port</string>
             </property>
-           </spacer>
+            <property name="text">
+             <string>Auto-Detection</string>
+            </property>
+           </widget>
+          </item>
+          <item row="1" column="0">
+           <widget class="QLabel" name="label_2">
+            <property name="text">
+             <string>Adjust the COM-Port for Automatic Detection</string>
+            </property>
+           </widget>
+          </item>
+          <item row="5" column="0">
+           <widget class="QLabel" name="label">
+            <property name="sizePolicy">
+             <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+              <horstretch>0</horstretch>
+              <verstretch>0</verstretch>
+             </sizepolicy>
+            </property>
+            <property name="text">
+             <string>Or Select a Specific Device for Manual Connection</string>
+            </property>
+            <property name="scaledContents">
+             <bool>false</bool>
+            </property>
+            <property name="wordWrap">
+             <bool>false</bool>
+            </property>
+           </widget>
           </item>
           <item row="4" column="0">
            <spacer name="verticalSpacer_3">
@@ -160,43 +210,6 @@
              </size>
             </property>
            </spacer>
-          </item>
-          <item row="3" column="0">
-           <widget class="QPushButton" name="btScan">
-            <property name="toolTip">
-             <string>Automatically Scan for Devices on the given COM-Port</string>
-            </property>
-            <property name="text">
-             <string>Auto-Detection</string>
-            </property>
-           </widget>
-          </item>
-          <item row="6" column="0">
-           <layout class="QHBoxLayout" name="horizontalLayout_12">
-            <item>
-             <widget class="QLabel" name="lblBaudrateRS485">
-              <property name="maximumSize">
-               <size>
-                <width>100</width>
-                <height>16777215</height>
-               </size>
-              </property>
-              <property name="text">
-               <string>Baudrate</string>
-              </property>
-             </widget>
-            </item>
-            <item>
-             <widget class="QComboBox" name="cbxBaudrateRS485">
-              <property name="minimumSize">
-               <size>
-                <width>200</width>
-                <height>0</height>
-               </size>
-              </property>
-             </widget>
-            </item>
-           </layout>
           </item>
           <item row="11" column="0">
            <layout class="QHBoxLayout" name="horizontalLayout_14">
@@ -231,10 +244,13 @@
             </item>
            </layout>
           </item>
-          <item row="2" column="0">
-           <layout class="QHBoxLayout" name="horizontalLayout_11">
+          <item row="12" column="0">
+           <layout class="QHBoxLayout" name="horizontalLayout_15">
             <item>
-             <widget class="QLabel" name="lblPortRS485">
+             <widget class="QLabel" name="lblStopbitsRS485">
+              <property name="enabled">
+               <bool>true</bool>
+              </property>
               <property name="maximumSize">
                <size>
                 <width>100</width>
@@ -242,12 +258,15 @@
                </size>
               </property>
               <property name="text">
-               <string>Port</string>
+               <string>Stopbits</string>
               </property>
              </widget>
             </item>
             <item>
-             <widget class="QComboBox" name="cbxPortRS485">
+             <widget class="QComboBox" name="cbxStopbitsRS485">
+              <property name="enabled">
+               <bool>true</bool>
+              </property>
               <property name="minimumSize">
                <size>
                 <width>200</width>
@@ -258,19 +277,18 @@
             </item>
            </layout>
           </item>
-          <item row="5" column="0">
-           <widget class="QLabel" name="label">
-            <property name="text">
-             <string>Or Select a Specific Device for Manual Connection</string>
+          <item row="14" column="0">
+           <spacer name="verticalSpacer_2">
+            <property name="orientation">
+             <enum>Qt::Vertical</enum>
             </property>
-           </widget>
-          </item>
-          <item row="1" column="0">
-           <widget class="QLabel" name="label_2">
-            <property name="text">
-             <string>Adjust the COM-Port for Automatic Detection</string>
+            <property name="sizeHint" stdset="0">
+             <size>
+              <width>20</width>
+              <height>40</height>
+             </size>
             </property>
-           </widget>
+           </spacer>
           </item>
          </layout>
         </widget>
@@ -456,7 +474,7 @@
       <enum>Qt::Horizontal</enum>
      </property>
      <property name="standardButtons">
-      <set>QDialogButtonBox::Cancel</set>
+      <set>QDialogButtonBox::Cancel|QDialogButtonBox::Ok</set>
      </property>
     </widget>
    </item>
